# tesla-factory-package

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
tesla/: __init__.py  factory.py
tests/: test_factory.py
