[project]
name = "tesla-factory-package-gedas-lt"
version="0.0.1"
description="Package for creating Tesla cars"
authors = [
    "Gediminas Šimavičius <gediminas.simavicius@gmail.com>"
]
license = "MIT"
readme = "README.md"
python = "^3.8"
homepage = "https://github.com/Gedas-LT/tesla-factory-package"
repository = "https://github.com/Gedas-LT/tesla-factory-package" 

[build-system]
requires = [
    "setuptools>=52",
    "wheel"
]
build-backend = "setuptools.build_meta"